# eclingo

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  AUTHORS.md  CHANGES.md  LICENSE  LICENSE.md  README.md  clingo-5.5.0-py38lua53hf484d3e_20.tar.bz2  eclingo.py  environment.yml  main.py  noxfile.py  pylama.ini  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS
action-reversability-benchmarks/: README.md  generate-nseq-ordered.py  run.py  sequential-horizon.uurev.clingo.lp  sequential-horizon.uurev.eclingo.lp
asp/: easy.lp
bomb_problems/: README.md  bmtc.lp  bmtuc.lp  bt.lp  bt_base.lp  btc.lp  btuc.lp  commands.txt  create_instances.py
eclingo/: __init__.py  __main__.py  clingo_types.py  config.py  control.py  eclingo.py  grounder.py  literals.py  main.py  prefixes.py
helper_test/: helper.py  helper_clingo.py  helper_eclingo.py  helper_parsing.py  helper_wv_builder_show.py  inspector.py
test/: literals.py  parametrized.py  test_app.py  test_clingoext.py  test_eclingo.py  test_eclingo_examples.py  test_g94.py  test_ground.py  test_grounder.py  test_main.py  test_parsing.py  test_pretty.py  test_show.py  test_transformers.py
tests/: _test_g94.py  _test_grounder.py  _test_show.py  _test_tester.py  ast_tester.py  build_programs.py  generated_programs.py  helper_build_programs.py  parametrized.py  parse_programs.py  programs.py  programs_back.py  programs_helper.py  test_app.py  test_candidate.py  test_eclingo.py  test_eclingo_examples.py  test_generator_reification.py  test_literals.py  test_parsing.py  (+14 more)
(+411 files in other folders)
